--- a/2018-1-15/management/package.json
+++ b/2018-1-15/management/package.json
@@ -14,6 +14,7 @@
     "express-session": "^1.15.6",
     "mongoose": "^4.13.9",
     "morgan": "~1.9.0",
+    "multiparty": "^4.1.3",
     "serve-favicon": "~2.4.5"
   }
 }
